Backport current connector fixes to Trino 479